@@ -1,23 +1,16 @@
 package org.example;
 
-import org.example.model.dao.EmployeeEntity;
 import org.example.model.dao.NorthwindDao;
-import org.example.model.dao.NorthwindDaoImpl;
-import org.example.model.dao.SalariesEntity;
-
-import java.math.BigDecimal;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import org.example.model.dao.NorthwindDaoImplSalary_raise;
 
 
 public class Main {
 
     public static void main(String[] args) {
+        NorthwindDao northwindDao = new NorthwindDaoImplSalary_raise();
 
-        NorthwindDao northwindDao = new NorthwindDaoImpl();
-        northwindDao.increaseSalary(northwindDao.getEmployees(), northwindDao.getSalary());
+        //northwindDao.increaseSalary(northwindDao.getEmployees(), northwindDao.getSalary());
 
+        //northwindDao.updateNames(northwindDao.getEmployees());
     }
 }
