@@ -2,30 +2,27 @@ package org.example.model.dao;
 
 import org.example.ConnectionFactory;
 
-import java.math.BigDecimal;
 import java.sql.*;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
-public class NorthwindDaoImpl extends NorthwindDao {
+public class NorthwindDaoImplSalary_raise extends NorthwindDao {
 
     private static final String GET_EMPLOYEE_REQUEST = "SELECT * FROM employees";
     private static final String GET_SALARY_REQUEST = "SELECT * FROM employees_salary";
     private static final String UPDATE_SALARY_REQUEST = "UPDATE employees_salary SET salary = ? WHERE employee_id = ?";
 
-    private final ConnectionFactory connection;
+    private final ConnectionFactory CONNECTION;
 
-    public NorthwindDaoImpl() {
-        this.connection = new ConnectionFactory("postgres", "1");
+    public NorthwindDaoImplSalary_raise() {
+        this.CONNECTION = new ConnectionFactory("postgres", "1");
 
     }
 
     @Override
     public List<EmployeeEntity> getEmployees() {
         List<EmployeeEntity> employees = new ArrayList<>();
-        try (PreparedStatement stmt = connection.prepareStatement(GET_EMPLOYEE_REQUEST);
+        try (PreparedStatement stmt = CONNECTION.prepareStatement(GET_EMPLOYEE_REQUEST);
              ResultSet rs = stmt.executeQuery()) {
             while (rs.next()) {
                 employees.add(new EmployeeEntity(rs.getInt("employee_id"),
@@ -41,7 +38,7 @@ public class NorthwindDaoImpl extends NorthwindDao {
     @Override
     public List<SalariesEntity> getSalary() {
         List<SalariesEntity> salary = new ArrayList<>();
-        try (PreparedStatement stmt = connection.prepareStatement(GET_SALARY_REQUEST);
+        try (PreparedStatement stmt = CONNECTION.prepareStatement(GET_SALARY_REQUEST);
              ResultSet rs = stmt.executeQuery()) {
             while (rs.next()) {
                 salary.add(new SalariesEntity(rs.getInt("employee_id"),
@@ -56,15 +53,18 @@ public class NorthwindDaoImpl extends NorthwindDao {
     @Override
     public int[] increaseSalary(List<EmployeeEntity> employees, List<SalariesEntity> salaries) {
 
-        try(PreparedStatement stmt = connection.prepareStatement(UPDATE_SALARY_REQUEST)) {
+        super.increaseSalary(employees, salaries);
 
-            /// todo organization add new value salaries in PostgreSQL;
-
+        try (PreparedStatement stmt = CONNECTION.prepareStatement(UPDATE_SALARY_REQUEST)) {
+            for (int i = 0; i <= salaries.size() - 1; i++) {
+                stmt.setBigDecimal(1, salaries.get(i).getValue());
+                stmt.setInt(2, salaries.get(i).getId());
+                stmt.addBatch();
+            }
+            stmt.executeBatch();
         } catch (SQLException e) {
             throw new RuntimeException(e);
         }
-
-                return new int[0];
-            }
-
-        }
+        return new int[1];
+    }
+}
