@@ -4,7 +4,7 @@
    II. Изменить сотруднику Фамилию, с использованием  preparedStatement (можно ввести фамилию в консоль)
         смысл в том что в запросе будут участвовать данные которые ввёл пользователь. - The task is not completed❌
   III. Индексировать сотрудникам  зарплату с использованием batchUpdate в консоли выбираем на какой
-        процент индексировать или индексируем на заранее заданные значения.(2%, 5% , 10 %). - The task is not completed❌
+        процент индексировать или индексируем на заранее заданные значения.(2%, 5% , 10 %). - The task is completed✅
    IV. Если нет таблицы с зарплатой её сперва нужно создать. - The task is completed✅
 
 
